force-app/main/default/objects/sked_Lunch_Break_Definition__c/fields/sked_Lunch_Break_Setting__c.field-meta.xml
<CustomField>
    <fullName>sked_Lunch_Break_Setting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lunch Break Setting</label>
    <referenceTo>sked_Lunch_Break_Setting__c</referenceTo>
    <relationshipLabel>Lunch Break Definitions</relationshipLabel>
    <relationshipName>sked_Lunch_Break_Definitions</relationshipName>
    <type>Lookup</type>
</CustomField>