force-app/main/default/objects/sked_Lunch_Break_Definition__c/fields/sked_Min_Number_of_Staff__c.field-meta.xml
<CustomField>
    <fullName>sked_Min_Number_of_Staff__c</fullName>
    <label>Min Number of Staff</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>